# leptos-nostr-auth

./: .gitignore  Cargo.toml  README.md  clippy.toml  flake.nix
examples/basic-csr/: Cargo.toml  Trunk.toml  index.html
examples/basic-csr/src/: main.rs
examples/basic-csr/style/: brutalist.css
examples/with-axum-daisyui/: Cargo.toml
examples/with-axum-daisyui/src/: lib.rs  main.rs
examples/with-axum-daisyui/style/: tailwind.css
examples/with-axum-ssr/: Cargo.toml
examples/with-axum-ssr/src/: lib.rs  main.rs
examples/with-axum-ssr/style/: main.css
examples/with-daisyui/: Cargo.toml  Trunk.toml  index.html
examples/with-daisyui/src/: main.rs
examples/with-daisyui/style/: tailwind.css
src/: context.rs  lib.rs  modal 2.rs  modal.rs  platform.rs  signers.rs  storage.rs
