[package]
name = "leptos-nostr-auth"
version = "0.1.0"
edition = "2024"
description = "Headless Nostr authentication modal widget for Leptos"
license = "MIT"
keywords = ["nostr", "leptos", "wasm", "authentication", "login"]
categories = ["wasm", "web-programming", "authentication"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# daisyUI 5 + Tailwind v4 styling with dark theme
daisyui = []
# Raw nsec/hex private key paste — XSS risk; must be explicitly opted in
insecure_nsec_input = []

# Rendering modes — consumer enables exactly one per build target
ssr = [
    "leptos/ssr",
    "leptos-use/ssr",
]
hydrate = [
    "leptos/hydrate",
    "leptos-use/ssr",
]
csr = [
    "leptos/csr",
]

[dependencies]
# Leptos 0.8 — no mode hardcoded; consumers enable ssr/hydrate/csr
leptos     = { version = "0.8", default-features = false }

# use_event_listener + use_window (Escape key) + use_storage (SSR-safe localStorage)
leptos-use = { version = "0.18", default-features = false, features = [
    "use_event_listener",
    "use_window",
    "storage",
]}

# Codec for use_local_storage — JsonCodec encodes PersistedSession as JSON
# codee is already a transitive dep of leptos-use; listed explicitly for the type import
codee = { version = "0.3", features = ["json_serde"] }

# Nostr protocol: keys, events, NIP-19 bech32, NIP-49 ncryptsec (pure Rust)
nostr = { version = "0.44", default-features = false, features = ["std", "nip44", "nip49"] }

# WASM bridge — compiles on all targets; browser-specific imports are cfg-gated
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"

# Web platform APIs — types compile on all targets; actual API calls are cfg-gated
web-sys = { version = "0.3", features = [
  "Window",
  "Navigator",
  "console",
  "CredentialsContainer",
  "CredentialCreationOptions",
  "CredentialRequestOptions",
  "Crypto",
  "WebSocket",
  "MessageEvent",
  "ErrorEvent",
  "BinaryType",
  "Location",
]}

# Serialization (pure Rust)
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
base64     = { version = "0.22", features = ["alloc"] }

# Error types (pure Rust)
thiserror = "2"

# Makes non-Send types (Rc, web-sys objects) usable in Leptos signals on WASM.
# Safe because WASM is single-threaded; SendWrapper panics on cross-thread access.
send_wrapper = "0.6"

[dev-dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.8", features = ["csr"] }
