[package]
name = "leptos-nostr-auth"
version = "0.1.0"
edition = "2024"
description = "Headless Nostr authentication modal widget for Leptos"
license = "Apache-2.0"
authors = ["Devan Looches <devan.looches@gmail.com>"]
repository = "https://github.com/Magilis/leptos-nostr-auth"
readme = "README.md"
keywords = ["nostr", "leptos", "wasm", "authentication", "login"]
categories = ["wasm", "web-programming", "authentication"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# daisyUI 5 + Tailwind v4 styling with dark theme
daisyui = []
# Raw nsec/hex private key paste — XSS risk; must be explicitly opted in
insecure_nsec_input = []

# Rendering modes — consumer enables exactly one per build target
ssr = ["leptos/ssr", "leptos-use/ssr"]
hydrate = ["leptos/hydrate", "leptos-use/ssr"]
csr = ["leptos/csr"]

[dependencies]
# Leptos 0.8 — no mode hardcoded; consumers enable ssr/hydrate/csr
leptos = { version = "0.8", default-features = false }

# use_event_listener + use_window (Escape key) + use_storage (SSR-safe localStorage)
leptos-use = { version = "0.18", default-features = false, features = [
  "use_event_listener",
  "use_window",
  "storage",
] }

# Codec for use_local_storage — JsonCodec encodes PersistedSession as JSON
# codee is already a transitive dep of leptos-use; listed explicitly for the type import
codee = { version = "0.3", features = ["json_serde"] }

# Nostr protocol: keys, events, NIP-19 bech32, NIP-49 ncryptsec (pure Rust)
nostr = { version = "0.44", default-features = false, features = [
  "std",
  "nip44",
  "nip49",
] }

# WASM bridge — compiles on all targets; browser-specific imports are cfg-gated
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Web platform APIs — types compile on all targets; actual API calls are cfg-gated
web-sys = { version = "0.3", features = [
  "Window",
  "Navigator",
  "console",
  "CredentialsContainer",
  "CredentialCreationOptions",
  "CredentialRequestOptions",
  "Crypto",
  "WebSocket",
  "MessageEvent",
  "ErrorEvent",
  "BinaryType",
  "Location",
] }

# Serialization (pure Rust)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = { version = "0.22", features = ["alloc"] }

# Error types (pure Rust)
thiserror = "2"

# Makes non-Send types (Rc, web-sys objects) usable in Leptos signals on WASM.
# Safe because WASM is single-threaded; SendWrapper panics on cross-thread access.
send_wrapper = "0.6"

[dev-dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.8", features = ["csr"] }

[profile.release]
opt-level = "z"   # minimize binary size (WASM priority)
lto = true        # link-time optimization, reduces size + improves speed
codegen-units = 1 # max optimization (slower compile, better output)
panic = "abort"   # no unwinding — shrinks WASM significantly
strip = "symbols" # strip debug symbols from release

[profile.dev]
opt-level = 1 # faster incremental builds, avoids WASM slowness in dev

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
# Lint groups
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }

# Restriction lints
unwrap_used                   = "warn"
expect_used                   = "warn"
panic                         = "warn"
dbg_macro                     = "warn"
todo                          = "warn"
unimplemented                 = "warn"
indexing_slicing              = "warn"
str_to_string                 = "warn"
implicit_clone                = "warn"
arithmetic_side_effects       = "warn"
use_debug                     = "warn"
missing_docs_in_private_items = "warn"
std_instead_of_core           = "warn"
exhaustive_structs            = "warn"
exhaustive_enums              = "warn"
clone_on_ref_ptr              = "warn"
mem_forget                    = "warn"
print_stdout                  = "warn"
print_stderr                  = "warn"
map_err_ignore                = "warn"
try_err                       = "warn"
undocumented_unsafe_blocks    = "warn"
exit                          = "warn"
tests_outside_test_module     = "warn"

# Allow pedantic lints that don't fit this codebase
module_name_repetitions = "allow" # intentional: NostrAuth* prefix throughout public API
must_use_candidate      = "allow" # Leptos components return impl IntoView
wildcard_imports        = "allow" # use leptos::prelude::* is idiomatic Leptos
unused_async            = "allow" # SSR stubs are async to match the WASM API signature

