[workspace]
members = ["."]

[[workspace.metadata.leptos]]
name         = "with-axum-daisyui"
bin-package  = "with-axum-daisyui"
lib-package  = "with-axum-daisyui"
site-root    = "target/site"
site-pkg-dir = "pkg"
tailwind-input-file = "style/tailwind.css"
site-addr    = "127.0.0.1:3002"
reload-port  = 3003
bin-features = ["ssr"]
lib-features = ["hydrate"]

[package]
name = "with-axum-daisyui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "with-axum-daisyui"
path = "src/main.rs"
required-features = ["ssr"]

[features]
hydrate = [
    "leptos/hydrate",
    "leptos-nostr-auth/hydrate",
    "leptos-nostr-auth/daisyui",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
]
ssr = [
    "leptos/ssr",
    "leptos-nostr-auth/ssr",
    "leptos-nostr-auth/daisyui",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower-http",
]

[dependencies]
leptos            = { version = "0.8", default-features = false }
leptos-nostr-auth = { path = "../..", default-features = false }
nostr             = { version = "0.44", default-features = false, features = ["std"] }

# SSR-only
leptos_axum = { version = "0.8", optional = true }
axum        = { version = "0.8", optional = true }
tokio       = { version = "1", features = ["rt-multi-thread"], optional = true }
tower-http  = { version = "0.6", features = ["fs"], optional = true }

# Hydrate-only (WASM)
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen             = { version = "0.2", optional = true }
