[package]
name = "with-daisyui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "with-daisyui"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos-nostr-auth = { path = "../..", features = ["daisyui"] }
nostr = { version = "0.44", default-features = false, features = ["std"] }
console_error_panic_hook = "0.1"
