[package]
name = "with-daisyui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "with-daisyui"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos-nostr-auth = { path = "../..", features = ["csr", "daisyui"] }
nostr = { version = "0.44", default-features = false, features = ["std"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
